fix sidebar spacing issue

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -33,7 +33,7 @@
     letter-spacing: .3em;
     text-transform: uppercase;
     left: 0;
-    top: 13rem;
+    top: 10rem;
     width: 100vw;
     height: 100%;
     transform: translateX(-100%);
@@ -48,8 +48,15 @@
     transform: translateX(0);
 }
 
-  /* Small screen max-width 640px */
-@media only screen and (max-width:40em){
+@media only screen and (min-width:400px){
+
+    .main .item {
+        font-size: 2rem;
+    }
+    
+    }
+
+@media only screen and (min-width:640px){
 
 .main .item {
     margin: 1rem;
@@ -60,7 +67,13 @@
 
 }
 
-@media only screen and (max-width: 1800px){
+@media only screen and (min-width: 1200px){
+    .sidebar_wrapper {
+        top: 13rem;
+}
+}
+
+@media only screen and (min-width: 1800px){
     .sidebar_wrapper {
         top: 18rem;
 }
